fix: change visibility image

--- a/src/public/admin/css/styles.css
+++ b/src/public/admin/css/styles.css
@@ -1131,3 +1131,63 @@ a.todo-list-item:focus {
 	width: 120px;
 	height: auto;
 }
+
+/* Custom css */
+#product-img {
+	height: 280px;
+	text-align: center;
+}
+
+.product-image-main {
+	height: 180px;
+	margin-bottom: 20px;
+	position: relative;
+}
+
+.img-feature {
+	transition: 2s;
+}
+
+.product-image-list {
+	width: 100%;
+	height: 80px;
+	display: flex;
+	justify-content: space-between;
+	overflow: hidden;
+}
+
+.product-image-list div {
+	flex: 1;
+	cursor: pointer;
+}
+
+.product-image-list div img {
+	padding: 3px;
+}
+
+#product-img img {
+	width: auto;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+}
+
+.control {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 50px;
+	cursor: pointer;
+}
+
+.prev {
+	left: 10px;
+}
+
+.next {
+	right: 10px;
+}
+
+.activeImg {
+	background: #ff6600;
+}
