--- a/src/public/site/css/product.css
+++ b/src/public/site/css/product.css
@@ -12,13 +12,13 @@
 	padding: 10px 0;
 }
 
-#product-img {
+/* #product-img {
 	text-align: center;
-}
+} */
 
-#product-img img {
+/* #product-img img {
 	width: 250px;
-}
+} */
 
 #product-details h1,
 #product-body h3,
@@ -146,7 +146,61 @@
 }
 
 /* Custom css */
-.product-img-list {
+#product-img {
+	height: 380px;
+	text-align: center;
+}
+
+.product-image-main {
+	height: 250px;
+	margin-bottom: 20px;
+	position: relative;
+}
+
+.img-feature {
+	transition: 2s;
+}
+
+.product-image-list {
+	width: 100%;
+	height: 100px;
 	display: flex;
-	overflow-x: auto;
+	justify-content: space-between;
+	overflow: hidden;
+}
+
+.product-image-list div {
+	flex: 1;
+	cursor: pointer;
+}
+
+.product-image-list div img {
+	padding: 3px;
+}
+
+#product-img img {
+	width: auto;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+}
+
+.control {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 50px;
+	cursor: pointer;
+}
+
+.prev {
+	left: 10px;
+}
+
+.next {
+	right: 10px;
+}
+
+.active {
+	background: #ff6600;
 }
